Used Team3CardPlayAdapter as a component of the battle to handle card plays and card requests to the BattleController. Moved duplicated logic out from BattleActions.
Changed Team3CardPlayAdapter to call submitCardRequest from BattleController instead of directly playing the card.

Altered BattleActions and Team3CardPlayAdapter unit tests to reflect this change.

Moved CardEffectHandler into the cards folder under components and also added unit tests for the class.

#173